--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+- Check state operation when done a production
+- Do productions from operation that last operation is done
+
+Version 4.0.0 - 2016-06-30
+
 Version 3.4.0 - 2014-11-03
 
 Version 3.2.0 - 2014-06-02
