--- a/locale/es.po
+++ b/locale/es.po
@@ -2,22 +2,6 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "error:production.operation:"
-msgid "You can not create an operation for Production \"%s\"."
-msgstr "No puede craer una operación para la producción \"%s\"."
-
-msgctxt "error:production:"
-msgid ""
-"Production \"%(production)s\" can not be done because their operation "
-"\"%(operation)s\" is not done."
-msgstr ""
-"No se puede realizar la producción \"%(production)s\" porqué la operación "
-"\"%(operation)s\" todavía no esta realizada."
-
-msgctxt "error:production:"
-msgid "We can not found any work center for Operation \"%s\"."
-msgstr "No hemos encontrado ningún centro de trabajo para la operación \"%s\"."
-
 msgctxt "field:production,operations:"
 msgid "Operations"
 msgstr "Operaciones"
@@ -29,6 +13,10 @@ msgstr "Ruta"
 msgctxt "field:production.configuration,check_state_operation:"
 msgid "Check State Operation"
 msgstr "Comprobar estado operación"
+
+msgctxt "field:production.operation,company:"
+msgid "Company"
+msgstr "Empresa"
 
 msgctxt "field:production.operation,cost:"
 msgid "Cost"
@@ -44,7 +32,7 @@ msgstr "Usuario de creación"
 
 msgctxt "field:production.operation,id:"
 msgid "ID"
-msgstr "Identificador"
+msgstr "ID"
 
 msgctxt "field:production.operation,lines:"
 msgid "Lines"
@@ -59,7 +47,7 @@ msgid "Production"
 msgstr "Producción"
 
 msgctxt "field:production.operation,rec_name:"
-msgid "Name"
+msgid "Record Name"
 msgstr "Nombre"
 
 msgctxt "field:production.operation,route_operation:"
@@ -84,11 +72,15 @@ msgstr "Categoría del centro de trabajo"
 
 msgctxt "field:production.operation,write_date:"
 msgid "Write Date"
-msgstr "Fecha modificación"
+msgstr "Fecha de modificación"
 
 msgctxt "field:production.operation,write_uid:"
 msgid "Write User"
-msgstr "Usuario modificación"
+msgstr "Usuario de modificación"
+
+msgctxt "field:production.operation.tracking,company:"
+msgid "Company"
+msgstr "Empresa"
 
 msgctxt "field:production.operation.tracking,cost:"
 msgid "Cost"
@@ -104,7 +96,7 @@ msgstr "Usuario de creación"
 
 msgctxt "field:production.operation.tracking,id:"
 msgid "ID"
-msgstr "Identificador"
+msgstr "ID"
 
 msgctxt "field:production.operation.tracking,operation:"
 msgid "Operation"
@@ -115,7 +107,7 @@ msgid "Quantity"
 msgstr "Cantidad"
 
 msgctxt "field:production.operation.tracking,rec_name:"
-msgid "Name"
+msgid "Record Name"
 msgstr "Nombre"
 
 msgctxt "field:production.operation.tracking,unit_digits:"
@@ -128,11 +120,11 @@ msgstr "UdM"
 
 msgctxt "field:production.operation.tracking,write_date:"
 msgid "Write Date"
-msgstr "Fecha modificación"
+msgstr "Fecha de modificación"
 
 msgctxt "field:production.operation.tracking,write_uid:"
 msgid "Write User"
-msgstr "Usuario modificación"
+msgstr "Usuario de modificación"
 
 msgctxt "field:production.operation.type,create_date:"
 msgid "Create Date"
@@ -144,7 +136,7 @@ msgstr "Usuario de creación"
 
 msgctxt "field:production.operation.type,id:"
 msgid "ID"
-msgstr "Identificador"
+msgstr "ID"
 
 msgctxt "field:production.operation.type,name:"
 msgid "Name"
@@ -156,11 +148,11 @@ msgstr "Nombre"
 
 msgctxt "field:production.operation.type,write_date:"
 msgid "Write Date"
-msgstr "Fecha modificación"
+msgstr "Fecha de modificación"
 
 msgctxt "field:production.operation.type,write_uid:"
 msgid "Write User"
-msgstr "Usuario modificación"
+msgstr "Usuario de modificación"
 
 msgctxt "field:production.route,create_date:"
 msgid "Create Date"
@@ -172,7 +164,7 @@ msgstr "Usuario de creación"
 
 msgctxt "field:production.route,id:"
 msgid "ID"
-msgstr "Identificador"
+msgstr "ID"
 
 msgctxt "field:production.route,name:"
 msgid "Name"
@@ -188,11 +180,11 @@ msgstr "Nombre"
 
 msgctxt "field:production.route,write_date:"
 msgid "Write Date"
-msgstr "Fecha modificación"
+msgstr "Fecha de modificación"
 
 msgctxt "field:production.route,write_uid:"
 msgid "Write User"
-msgstr "Usuario modificación"
+msgstr "Usuario de modificación"
 
 msgctxt "field:production.route.operation,create_date:"
 msgid "Create Date"
@@ -204,7 +196,7 @@ msgstr "Usuario de creación"
 
 msgctxt "field:production.route.operation,id:"
 msgid "ID"
-msgstr "Identificador"
+msgstr "ID"
 
 msgctxt "field:production.route.operation,operation_type:"
 msgid "Operation Type"
@@ -228,11 +220,11 @@ msgstr "Centro de trabajo"
 
 msgctxt "field:production.route.operation,write_date:"
 msgid "Write Date"
-msgstr "Fecha modificación"
+msgstr "Fecha de modificación"
 
 msgctxt "field:production.route.operation,write_uid:"
 msgid "Write User"
-msgstr "Usuario modificación"
+msgstr "Usuario de modificación"
 
 msgctxt "field:production.work_center,category:"
 msgid "Category"
@@ -256,7 +248,7 @@ msgstr "Empleado"
 
 msgctxt "field:production.work_center,id:"
 msgid "ID"
-msgstr "Identificador"
+msgstr "ID"
 
 msgctxt "field:production.work_center,name:"
 msgid "Name"
@@ -276,11 +268,11 @@ msgstr "UdM"
 
 msgctxt "field:production.work_center,write_date:"
 msgid "Write Date"
-msgstr "Fecha modificación"
+msgstr "Fecha de modificación"
 
 msgctxt "field:production.work_center,write_uid:"
 msgid "Write User"
-msgstr "Usuario modificación"
+msgstr "Usuario de modificación"
 
 msgctxt "field:production.work_center.category,create_date:"
 msgid "Create Date"
@@ -292,7 +284,7 @@ msgstr "Usuario de creación"
 
 msgctxt "field:production.work_center.category,id:"
 msgid "ID"
-msgstr "Identificador"
+msgstr "ID"
 
 msgctxt "field:production.work_center.category,name:"
 msgid "Name"
@@ -304,15 +296,16 @@ msgstr "Nombre"
 
 msgctxt "field:production.work_center.category,write_date:"
 msgid "Write Date"
-msgstr "Fecha modificación"
+msgstr "Fecha de modificación"
 
 msgctxt "field:production.work_center.category,write_uid:"
 msgid "Write User"
-msgstr "Usuario modificación"
+msgstr "Usuario de modificación"
 
 msgctxt "help:production.configuration,check_state_operation:"
 msgid "Check state operation when done a production"
-msgstr "Comprueba el estado de las operaciones cuando se finaliza una producción"
+msgstr ""
+"Comprueba el estado de las operaciones cuando se finaliza una producción"
 
 msgctxt "model:ir.action,name:"
 msgid "Operation Type"
@@ -340,6 +333,26 @@ msgctxt ""
 "model:ir.action.act_window.domain,name:act_production_operation_domain_waiting"
 msgid "Waiting"
 msgstr "En espera"
+
+msgctxt "model:ir.model.button,string:production_operation_done_button"
+msgid "Done"
+msgstr "Realizado"
+
+msgctxt "model:ir.model.button,string:production_operation_run_button"
+msgid "Run"
+msgstr "Ejecutar"
+
+msgctxt "model:ir.model.button,string:production_operation_wait_button"
+msgid "Wait"
+msgstr "Esperando"
+
+msgctxt "model:ir.rule.group,name:rule_group_production_operation"
+msgid "Rule Group Product Operation"
+msgstr "Grupo de reglas de operación de producción"
+
+msgctxt "model:ir.rule.group,name:rule_group_production_operation_tracking"
+msgid "Rule Group Production Operation Tracking"
+msgstr "Grupo de reglas de registro de operación de producción"
 
 msgctxt "model:ir.ui.menu,name:"
 msgid "Operation Types"
