--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+Version 5.2.0 - 2019-05-07
 - Check state operation when done a production
 - Do productions from operation that last operation is done
 
