--- a/locale/ca.po
+++ b/locale/ca.po
@@ -336,22 +336,20 @@ msgstr "Esperant"
 msgctxt "model:ir.message,text:invalid_production_state"
 msgid "You can not create an operation for Production \"%(production)s\"."
 msgstr ""
-"   Aprende a pronunciar No podeu crear una operació per a la producció \"% "
-"(production) s\"."
+"No podeu crear una operació per a la producció \"""%(production)s\"."
 
 msgctxt "model:ir.message,text:no_work_center"
 msgid "We can not found any work center for  Operation \"%(operation)s\"."
 msgstr ""
-"   Aprende a pronunciar No hem trobat cap centre de treball per a l'operació"
-" \"% (operation) s\"."
+"No hem trobat cap centre de treball per a l'operació" " \"%(operation)s\"."
 
 msgctxt "model:ir.message,text:pending_operations"
 msgid ""
 "Production \"%(production)s\" can not be done because their operation "
 "\"%(operation)s\" is not done.'"
 msgstr ""
-"La producció \"% (production) s\" no es pot fer perquè la seva operació \"% "
-"(operation) s\" no s'ha fet. '"
+"La producció \"%(production)s\" no es pot fer perquè la seva operació \""
+"%(operation)s\" no s'ha fet. '"
 
 msgctxt "model:ir.model.button,string:production_operation_done_button"
 msgid "Done"
