--- a/locale/es.po
+++ b/locale/es.po
@@ -336,21 +336,21 @@ msgstr "En espera"
 
 msgctxt "model:ir.message,text:invalid_production_state"
 msgid "You can not create an operation for Production \"%(production)s\"."
-msgstr "No puede crear una operación para Producción \"% (producción) s\"."
+msgstr "No puede crear una operación para Producción \"%(producción)s\"."
 
 msgctxt "model:ir.message,text:no_work_center"
 msgid "We can not found any work center for  Operation \"%(operation)s\"."
 msgstr ""
-" No podemos encontrar ningún centro de trabajo para la Operación \"% "
-"(operación) s\"."
+" No podemos encontrar ningún centro de trabajo para la Operación \""
+"%(operación)s\"."
 
 msgctxt "model:ir.message,text:pending_operations"
 msgid ""
 "Production \"%(production)s\" can not be done because their operation "
 "\"%(operation)s\" is not done.'"
 msgstr ""
-" La producción \"% (producción) s\" no se puede realizar porque su operación"
-" \"% (operación) s\" no se ha realizado \"."
+" La producción \"%(producción)s\" no se puede realizar porque su operación"
+" \"%(operación)s\" no se ha realizado \"."
 
 msgctxt "model:ir.model.button,string:production_operation_done_button"
 msgid "Done"
