--- a/locale/es.po
+++ b/locale/es.po
@@ -349,8 +349,8 @@ msgid ""
 "Production \"%(production)s\" can not be done because their operation "
 "\"%(operation)s\" is not done.'"
 msgstr ""
-" La producción \"%(producción)s\" no se puede realizar porque su operación"
-" \"%(operación)s\" no se ha realizado \"."
+" La producción \"%(production)s\" no se puede realizar porque su operación"
+" \"%(operation)s\" no se ha realizado \"."
 
 msgctxt "model:ir.model.button,string:production_operation_done_button"
 msgid "Done"
