Check rule only if _check_access is set and enforce companies rule issue4080

--- a/locale/ca.po
+++ b/locale/ca.po
@@ -364,12 +364,12 @@ msgid "Wait"
 msgstr "En espera"
 
 msgctxt "model:ir.rule.group,name:rule_group_production_operation"
-msgid "Rule Group Product Operation"
-msgstr "Grup de regles d'operació de producció"
+msgid "User in companies"
+msgstr "Usuari a les empreses"
 
 msgctxt "model:ir.rule.group,name:rule_group_production_operation_tracking"
-msgid "Rule Group Production Operation Tracking"
-msgstr "Grup de regles de registre d'operació de producció"
+msgid "User in companies"
+msgstr "Usuari a les empreses"
 
 msgctxt "model:ir.ui.menu,name:"
 msgid "Operation Types"
