--- a/locale/ca.po
+++ b/locale/ca.po
@@ -22,18 +22,6 @@ msgctxt "field:production.operation,cost:"
 msgid "Cost"
 msgstr "Cost"
 
-msgctxt "field:production.operation,create_date:"
-msgid "Create Date"
-msgstr "Data de creació"
-
-msgctxt "field:production.operation,create_uid:"
-msgid "Create User"
-msgstr "Usuari de creació"
-
-msgctxt "field:production.operation,id:"
-msgid "ID"
-msgstr "ID"
-
 msgctxt "field:production.operation,lines:"
 msgid "Lines"
 msgstr "Línies"
@@ -46,21 +34,17 @@ msgctxt "field:production.operation,production:"
 msgid "Production"
 msgstr "Producció"
 
-msgctxt "field:production.operation,rec_name:"
-msgid "Record Name"
-msgstr "Nom"
-
 msgctxt "field:production.operation,route_operation:"
 msgid "Route Operation"
 msgstr "Ruta"
 
-msgctxt "field:production.operation,sequence:"
-msgid "Sequence"
-msgstr "Seqüència"
-
 msgctxt "field:production.operation,state:"
 msgid "State"
 msgstr "Estat"
+
+msgctxt "field:production.operation,total_quantity:"
+msgid "Total Quantity"
+msgstr "Quantitat total"
 
 msgctxt "field:production.operation,work_center:"
 msgid "Work Center"
@@ -70,14 +54,6 @@ msgctxt "field:production.operation,work_center_category:"
 msgid "Work Center Category"
 msgstr "Categoria del centre de treball"
 
-msgctxt "field:production.operation,write_date:"
-msgid "Write Date"
-msgstr "Data de modificació"
-
-msgctxt "field:production.operation,write_uid:"
-msgid "Write User"
-msgstr "Usuari de modificació"
-
 msgctxt "field:production.operation.tracking,company:"
 msgid "Company"
 msgstr "Empresa"
@@ -85,18 +61,6 @@ msgstr "Empresa"
 msgctxt "field:production.operation.tracking,cost:"
 msgid "Cost"
 msgstr "Cost"
-
-msgctxt "field:production.operation.tracking,create_date:"
-msgid "Create Date"
-msgstr "Data de creació"
-
-msgctxt "field:production.operation.tracking,create_uid:"
-msgid "Create User"
-msgstr "Usuari de creació"
-
-msgctxt "field:production.operation.tracking,id:"
-msgid "ID"
-msgstr "ID"
 
 msgctxt "field:production.operation.tracking,operation:"
 msgid "Operation"
@@ -106,65 +70,13 @@ msgctxt "field:production.operation.tracking,quantity:"
 msgid "Quantity"
 msgstr "Quantitat"
 
-msgctxt "field:production.operation.tracking,rec_name:"
-msgid "Record Name"
-msgstr "Nom"
-
-msgctxt "field:production.operation.tracking,unit_digits:"
-msgid "Unit Digits"
-msgstr "Decimals d'unitat"
-
 msgctxt "field:production.operation.tracking,uom:"
 msgid "Uom"
 msgstr "UdM"
 
-msgctxt "field:production.operation.tracking,write_date:"
-msgid "Write Date"
-msgstr "Data de modificació"
-
-msgctxt "field:production.operation.tracking,write_uid:"
-msgid "Write User"
-msgstr "Usuari de modificació"
-
-msgctxt "field:production.operation.type,create_date:"
-msgid "Create Date"
-msgstr "Data de creació"
-
-msgctxt "field:production.operation.type,create_uid:"
-msgid "Create User"
-msgstr "Usuari de creació"
-
-msgctxt "field:production.operation.type,id:"
-msgid "ID"
-msgstr "ID"
-
 msgctxt "field:production.operation.type,name:"
 msgid "Name"
 msgstr "Nom"
-
-msgctxt "field:production.operation.type,rec_name:"
-msgid "Name"
-msgstr "Nom"
-
-msgctxt "field:production.operation.type,write_date:"
-msgid "Write Date"
-msgstr "Data de modificació"
-
-msgctxt "field:production.operation.type,write_uid:"
-msgid "Write User"
-msgstr "Usuari de modificació"
-
-msgctxt "field:production.route,create_date:"
-msgid "Create Date"
-msgstr "Data de creació"
-
-msgctxt "field:production.route,create_uid:"
-msgid "Create User"
-msgstr "Usuari de creació"
-
-msgctxt "field:production.route,id:"
-msgid "ID"
-msgstr "ID"
 
 msgctxt "field:production.route,name:"
 msgid "Name"
@@ -174,57 +86,17 @@ msgctxt "field:production.route,operations:"
 msgid "Operations"
 msgstr "Operacions"
 
-msgctxt "field:production.route,rec_name:"
-msgid "Name"
-msgstr "Nom"
-
-msgctxt "field:production.route,write_date:"
-msgid "Write Date"
-msgstr "Data de modificació"
-
-msgctxt "field:production.route,write_uid:"
-msgid "Write User"
-msgstr "Usuari de modificació"
-
-msgctxt "field:production.route.operation,create_date:"
-msgid "Create Date"
-msgstr "Data de creació"
-
-msgctxt "field:production.route.operation,create_uid:"
-msgid "Create User"
-msgstr "Usuari de creació"
-
-msgctxt "field:production.route.operation,id:"
-msgid "ID"
-msgstr "ID"
-
 msgctxt "field:production.route.operation,operation_type:"
 msgid "Operation Type"
 msgstr "Tipus d'operació"
-
-msgctxt "field:production.route.operation,rec_name:"
-msgid "Name"
-msgstr "Nom"
 
 msgctxt "field:production.route.operation,route:"
 msgid "Route"
 msgstr "Ruta"
 
-msgctxt "field:production.route.operation,sequence:"
-msgid "Sequence"
-msgstr "Seqüència"
-
 msgctxt "field:production.route.operation,work_center:"
 msgid "Work Center"
 msgstr "Centre de treball"
-
-msgctxt "field:production.route.operation,write_date:"
-msgid "Write Date"
-msgstr "Data de modificació"
-
-msgctxt "field:production.route.operation,write_uid:"
-msgid "Write User"
-msgstr "Usuari de modificació"
 
 msgctxt "field:production.work_center,category:"
 msgid "Category"
@@ -234,27 +106,11 @@ msgctxt "field:production.work_center,cost_price:"
 msgid "Cost Price"
 msgstr "Preu de cost"
 
-msgctxt "field:production.work_center,create_date:"
-msgid "Create Date"
-msgstr "Data de creació"
-
-msgctxt "field:production.work_center,create_uid:"
-msgid "Create User"
-msgstr "Usuari de creació"
-
 msgctxt "field:production.work_center,employee:"
 msgid "Employee"
 msgstr "Empleat"
 
-msgctxt "field:production.work_center,id:"
-msgid "ID"
-msgstr "ID"
-
 msgctxt "field:production.work_center,name:"
-msgid "Name"
-msgstr "Nom"
-
-msgctxt "field:production.work_center,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
@@ -266,41 +122,9 @@ msgctxt "field:production.work_center,uom:"
 msgid "Uom"
 msgstr "UdM"
 
-msgctxt "field:production.work_center,write_date:"
-msgid "Write Date"
-msgstr "Data de modificació"
-
-msgctxt "field:production.work_center,write_uid:"
-msgid "Write User"
-msgstr "Usuari de modificació"
-
-msgctxt "field:production.work_center.category,create_date:"
-msgid "Create Date"
-msgstr "Data de creació"
-
-msgctxt "field:production.work_center.category,create_uid:"
-msgid "Create User"
-msgstr "Usuari de creació"
-
-msgctxt "field:production.work_center.category,id:"
-msgid "ID"
-msgstr "ID"
-
 msgctxt "field:production.work_center.category,name:"
 msgid "Name"
 msgstr "Nom"
-
-msgctxt "field:production.work_center.category,rec_name:"
-msgid "Name"
-msgstr "Nom"
-
-msgctxt "field:production.work_center.category,write_date:"
-msgid "Write Date"
-msgstr "Data de modificació"
-
-msgctxt "field:production.work_center.category,write_uid:"
-msgid "Write User"
-msgstr "Usuari de modificació"
 
 msgctxt "help:production.configuration,check_state_operation:"
 msgid "Check state operation when done a production"
@@ -324,6 +148,11 @@ msgid "All"
 msgstr "Tots"
 
 msgctxt ""
+"model:ir.action.act_window.domain,name:act_production_operation_domain_planned"
+msgid "Planned"
+msgstr "Planificat"
+
+msgctxt ""
 "model:ir.action.act_window.domain,name:act_production_operation_domain_running"
 msgid "Running"
 msgstr "En curs"
@@ -335,21 +164,23 @@ msgstr "Esperant"
 
 msgctxt "model:ir.message,text:invalid_production_state"
 msgid "You can not create an operation for Production \"%(production)s\"."
-msgstr ""
-"No podeu crear una operació per a la producció \"%(production)s\"."
+msgstr "No podeu crear una operació per a la producció \"%(production)s\"."
 
 msgctxt "model:ir.message,text:no_work_center"
 msgid "We can not found any work center for  Operation \"%(operation)s\"."
-msgstr ""
-"No hem trobat cap centre de treball per a l'operació \"%(operation)s\"."
+msgstr "No hem trobat cap centre de treball per a l'operació \"%(operation)s\"."
 
 msgctxt "model:ir.message,text:pending_operations"
 msgid ""
 "Production \"%(production)s\" can not be done because their operation "
 "\"%(operation)s\" is not done.'"
 msgstr ""
-"La producció \"%(production)s\" no es pot fer perquè la seva operació \""
-"%(operation)s\" no s'ha fet. '"
+"La producció \"%(production)s\" no es pot fer perquè la seva operació "
+"\"%(operation)s\" no s'ha fet. '"
+
+msgctxt "model:ir.model.button,string:production_operation_cancel_button"
+msgid "Cancel"
+msgstr "Cancel·la"
 
 msgctxt "model:ir.model.button,string:production_operation_done_button"
 msgid "Done"
@@ -452,24 +283,8 @@ msgid "Operation Type"
 msgstr "Tipus d'operació"
 
 msgctxt "view:production.operation:"
-msgid "Done"
-msgstr "Realitzat"
-
-msgctxt "view:production.operation:"
 msgid "Lines"
 msgstr "Línies"
-
-msgctxt "view:production.operation:"
-msgid "Operation"
-msgstr "Operació"
-
-msgctxt "view:production.operation:"
-msgid "Run"
-msgstr "Executa"
-
-msgctxt "view:production.operation:"
-msgid "Wait"
-msgstr "En espera"
 
 msgctxt "view:production.route.operation:"
 msgid "Route Operation"
