--- a/locale/es.po
+++ b/locale/es.po
@@ -22,18 +22,6 @@ msgctxt "field:production.operation,cost:"
 msgid "Cost"
 msgstr "Coste"
 
-msgctxt "field:production.operation,create_date:"
-msgid "Create Date"
-msgstr "Fecha de creación"
-
-msgctxt "field:production.operation,create_uid:"
-msgid "Create User"
-msgstr "Usuario de creación"
-
-msgctxt "field:production.operation,id:"
-msgid "ID"
-msgstr "ID"
-
 msgctxt "field:production.operation,lines:"
 msgid "Lines"
 msgstr "Líneas"
@@ -46,21 +34,17 @@ msgctxt "field:production.operation,production:"
 msgid "Production"
 msgstr "Producción"
 
-msgctxt "field:production.operation,rec_name:"
-msgid "Record Name"
-msgstr "Nombre"
-
 msgctxt "field:production.operation,route_operation:"
 msgid "Route Operation"
 msgstr "Ruta de operación"
 
-msgctxt "field:production.operation,sequence:"
-msgid "Sequence"
-msgstr "Secuencia"
-
 msgctxt "field:production.operation,state:"
 msgid "State"
 msgstr "Estado"
+
+msgctxt "field:production.operation,total_quantity:"
+msgid "Total Quantity"
+msgstr "Cantidad total"
 
 msgctxt "field:production.operation,work_center:"
 msgid "Work Center"
@@ -70,14 +54,6 @@ msgctxt "field:production.operation,work_center_category:"
 msgid "Work Center Category"
 msgstr "Categoría del centro de trabajo"
 
-msgctxt "field:production.operation,write_date:"
-msgid "Write Date"
-msgstr "Fecha de modificación"
-
-msgctxt "field:production.operation,write_uid:"
-msgid "Write User"
-msgstr "Usuario de modificación"
-
 msgctxt "field:production.operation.tracking,company:"
 msgid "Company"
 msgstr "Empresa"
@@ -85,18 +61,6 @@ msgstr "Empresa"
 msgctxt "field:production.operation.tracking,cost:"
 msgid "Cost"
 msgstr "Coste"
-
-msgctxt "field:production.operation.tracking,create_date:"
-msgid "Create Date"
-msgstr "Fecha de creación"
-
-msgctxt "field:production.operation.tracking,create_uid:"
-msgid "Create User"
-msgstr "Usuario de creación"
-
-msgctxt "field:production.operation.tracking,id:"
-msgid "ID"
-msgstr "ID"
 
 msgctxt "field:production.operation.tracking,operation:"
 msgid "Operation"
@@ -106,65 +70,13 @@ msgctxt "field:production.operation.tracking,quantity:"
 msgid "Quantity"
 msgstr "Cantidad"
 
-msgctxt "field:production.operation.tracking,rec_name:"
-msgid "Record Name"
-msgstr "Nombre"
-
-msgctxt "field:production.operation.tracking,unit_digits:"
-msgid "Unit Digits"
-msgstr "Decimales de la unidad"
-
 msgctxt "field:production.operation.tracking,uom:"
 msgid "Uom"
 msgstr "UdM"
 
-msgctxt "field:production.operation.tracking,write_date:"
-msgid "Write Date"
-msgstr "Fecha de modificación"
-
-msgctxt "field:production.operation.tracking,write_uid:"
-msgid "Write User"
-msgstr "Usuario de modificación"
-
-msgctxt "field:production.operation.type,create_date:"
-msgid "Create Date"
-msgstr "Fecha de creación"
-
-msgctxt "field:production.operation.type,create_uid:"
-msgid "Create User"
-msgstr "Usuario de creación"
-
-msgctxt "field:production.operation.type,id:"
-msgid "ID"
-msgstr "ID"
-
 msgctxt "field:production.operation.type,name:"
 msgid "Name"
 msgstr "Nombre"
-
-msgctxt "field:production.operation.type,rec_name:"
-msgid "Name"
-msgstr "Nombre"
-
-msgctxt "field:production.operation.type,write_date:"
-msgid "Write Date"
-msgstr "Fecha de modificación"
-
-msgctxt "field:production.operation.type,write_uid:"
-msgid "Write User"
-msgstr "Usuario de modificación"
-
-msgctxt "field:production.route,create_date:"
-msgid "Create Date"
-msgstr "Fecha de creación"
-
-msgctxt "field:production.route,create_uid:"
-msgid "Create User"
-msgstr "Usuario de creación"
-
-msgctxt "field:production.route,id:"
-msgid "ID"
-msgstr "ID"
 
 msgctxt "field:production.route,name:"
 msgid "Name"
@@ -174,57 +86,17 @@ msgctxt "field:production.route,operations:"
 msgid "Operations"
 msgstr "Operaciones"
 
-msgctxt "field:production.route,rec_name:"
-msgid "Name"
-msgstr "Nombre"
-
-msgctxt "field:production.route,write_date:"
-msgid "Write Date"
-msgstr "Fecha de modificación"
-
-msgctxt "field:production.route,write_uid:"
-msgid "Write User"
-msgstr "Usuario de modificación"
-
-msgctxt "field:production.route.operation,create_date:"
-msgid "Create Date"
-msgstr "Fecha de creación"
-
-msgctxt "field:production.route.operation,create_uid:"
-msgid "Create User"
-msgstr "Usuario de creación"
-
-msgctxt "field:production.route.operation,id:"
-msgid "ID"
-msgstr "ID"
-
 msgctxt "field:production.route.operation,operation_type:"
 msgid "Operation Type"
 msgstr "Tipo de operación"
-
-msgctxt "field:production.route.operation,rec_name:"
-msgid "Name"
-msgstr "Nombre"
 
 msgctxt "field:production.route.operation,route:"
 msgid "Route"
 msgstr "Ruta"
 
-msgctxt "field:production.route.operation,sequence:"
-msgid "Sequence"
-msgstr "Secuencia"
-
 msgctxt "field:production.route.operation,work_center:"
 msgid "Work Center"
 msgstr "Centro de trabajo"
-
-msgctxt "field:production.route.operation,write_date:"
-msgid "Write Date"
-msgstr "Fecha de modificación"
-
-msgctxt "field:production.route.operation,write_uid:"
-msgid "Write User"
-msgstr "Usuario de modificación"
 
 msgctxt "field:production.work_center,category:"
 msgid "Category"
@@ -234,27 +106,11 @@ msgctxt "field:production.work_center,cost_price:"
 msgid "Cost Price"
 msgstr "Precio de coste"
 
-msgctxt "field:production.work_center,create_date:"
-msgid "Create Date"
-msgstr "Fecha de creación"
-
-msgctxt "field:production.work_center,create_uid:"
-msgid "Create User"
-msgstr "Usuario de creación"
-
 msgctxt "field:production.work_center,employee:"
 msgid "Employee"
 msgstr "Empleado"
 
-msgctxt "field:production.work_center,id:"
-msgid "ID"
-msgstr "ID"
-
 msgctxt "field:production.work_center,name:"
-msgid "Name"
-msgstr "Nombre"
-
-msgctxt "field:production.work_center,rec_name:"
 msgid "Name"
 msgstr "Nombre"
 
@@ -266,41 +122,9 @@ msgctxt "field:production.work_center,uom:"
 msgid "Uom"
 msgstr "UdM"
 
-msgctxt "field:production.work_center,write_date:"
-msgid "Write Date"
-msgstr "Fecha de modificación"
-
-msgctxt "field:production.work_center,write_uid:"
-msgid "Write User"
-msgstr "Usuario de modificación"
-
-msgctxt "field:production.work_center.category,create_date:"
-msgid "Create Date"
-msgstr "Fecha de creación"
-
-msgctxt "field:production.work_center.category,create_uid:"
-msgid "Create User"
-msgstr "Usuario de creación"
-
-msgctxt "field:production.work_center.category,id:"
-msgid "ID"
-msgstr "ID"
-
 msgctxt "field:production.work_center.category,name:"
 msgid "Name"
 msgstr "Nombre"
-
-msgctxt "field:production.work_center.category,rec_name:"
-msgid "Name"
-msgstr "Nombre"
-
-msgctxt "field:production.work_center.category,write_date:"
-msgid "Write Date"
-msgstr "Fecha de modificación"
-
-msgctxt "field:production.work_center.category,write_uid:"
-msgid "Write User"
-msgstr "Usuario de modificación"
 
 msgctxt "help:production.configuration,check_state_operation:"
 msgid "Check state operation when done a production"
@@ -325,6 +149,11 @@ msgid "All"
 msgstr "Todos"
 
 msgctxt ""
+"model:ir.action.act_window.domain,name:act_production_operation_domain_planned"
+msgid "Planned"
+msgstr "Planificado"
+
+msgctxt ""
 "model:ir.action.act_window.domain,name:act_production_operation_domain_running"
 msgid "Running"
 msgstr "En ejecución"
@@ -341,16 +170,20 @@ msgstr "No puede crear una operación para Producción \"%(producción)s\"."
 msgctxt "model:ir.message,text:no_work_center"
 msgid "We can not found any work center for  Operation \"%(operation)s\"."
 msgstr ""
-" No podemos encontrar ningún centro de trabajo para la Operación \""
-"%(operación)s\"."
+" No podemos encontrar ningún centro de trabajo para la Operación "
+"\"%(operación)s\"."
 
 msgctxt "model:ir.message,text:pending_operations"
 msgid ""
 "Production \"%(production)s\" can not be done because their operation "
 "\"%(operation)s\" is not done.'"
 msgstr ""
-" La producción \"%(production)s\" no se puede realizar porque su operación"
-" \"%(operation)s\" no se ha realizado \"."
+" La producción \"%(production)s\" no se puede realizar porque su operación "
+"\"%(operation)s\" no se ha realizado \"."
+
+msgctxt "model:ir.model.button,string:production_operation_cancel_button"
+msgid "Cancel"
+msgstr "Cancelar"
 
 msgctxt "model:ir.model.button,string:production_operation_done_button"
 msgid "Done"
@@ -453,24 +286,8 @@ msgid "Operation Type"
 msgstr "Tipo de operación"
 
 msgctxt "view:production.operation:"
-msgid "Done"
-msgstr "Realizado"
-
-msgctxt "view:production.operation:"
 msgid "Lines"
 msgstr "Líneas"
-
-msgctxt "view:production.operation:"
-msgid "Operation"
-msgstr "Operación"
-
-msgctxt "view:production.operation:"
-msgid "Run"
-msgstr "Ejecutar"
-
-msgctxt "view:production.operation:"
-msgid "Wait"
-msgstr "Esperando"
 
 msgctxt "view:production.route.operation:"
 msgid "Route Operation"
